scheduled_birthday_reminder works

--- a/.gitignore
+++ b/.gitignore
@@ -129,8 +129,4 @@ dmypy.json
 .pyre/
 
 # Data
-today_headline.json
-set_channel_headline.json
-
-today_national.json
-set_channel_national.json
+set_channel.json
